--- a/assets/css/Dark-NavBar.css
+++ b/assets/css/Dark-NavBar.css
@@ -56,6 +56,7 @@
 .navigation-clean-button.navbar .navbar-nav .nav-link {
   padding-left: 18px;
   padding-right: 18px;
+  font-size: initial;
 }
 
 .navigation-clean-button.navbar-light .navbar-nav .nav-link {
@@ -64,6 +65,12 @@
 
 .navigation-clean-button.navbar-light .navbar-nav .nav-link:focus, .navigation-clean-button.navbar-light .navbar-nav .nav-link:hover {
   color: #37434d !important;
-  background-color: transparent;
+  background-color: white;
 }
+
+ a.navbar-brand{
+  font-size: x-large;
+  
+}
+
 
