--- a/css/navbar.css
+++ b/css/navbar.css
@@ -40,19 +40,20 @@ nav .nav-items li a{
   text-decoration: none;
 }
 nav .nav-items li a:hover{
-  color: #ff3d00;
+  color:#28a9e0;
 }
 nav form{
   display: flex;
   height: 40px;
   padding: 2px;
-  background: #1e232b;
+  background: red;
   min-width: 18%!important;
   border-radius: 2px;
   border: 1px solid rgba(155,155,155,0.2);
 }
 nav form .search-data{
   width: 100%;
+  
   height: 100%;
   padding: 0 10px;
   color: #fff;
@@ -65,13 +66,13 @@ nav form button{
   padding: 0 15px;
   color: #fff;
   font-size: 17px;
-  background: #ff3d00;
+  background:#28a9e0;
   border: none;
   border-radius: 2px;
   cursor: pointer;
 }
 nav form button:hover{
-  background: #e63600;
+  background:#28a9e0;
 }
 nav .menu-icon,
 nav .cancel-icon,
@@ -111,7 +112,7 @@ nav .search-icon{
     height: 100%;
     padding: 10px 50px 0 50px;
     text-align: center;
-    background: #14181f;
+    background: red;
     display: inline-block;
     transition: left 0.3s ease;
   }
@@ -147,7 +148,7 @@ nav .search-icon{
     height: 0;
     z-index: -1;
     border: 10px solid transparent;
-    border-bottom-color: #1e232b;
+    border-bottom-color: red;
     margin: -20px 0 0;
   }
   nav form:after{
@@ -155,7 +156,7 @@ nav .search-icon{
     content: '';
     height: 60px;
     padding: 2px;
-    background: #1e232b;
+    background: red;
     border-radius: 2px;
     min-width: calc(100% + 20px);
     z-index: -2;
